<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:background="#262626">

    <ImageView
        android:id="@+id/img_tv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shape2"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/shape_detail"
        app:layout_constraintBottom_toBottomOf="@id/img_tv"
        app:layout_constraintEnd_toEndOf="@id/img_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_tv" >

        <ImageView
            android:id="@+id/imgShare"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/imgShare"
            app:layout_constraintEnd_toEndOf="@id/imgShare"
            app:layout_constraintTop_toBottomOf="@id/imgShare"/>

        <ImageView
            android:id="@+id/imgFav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintStart_toStartOf="@id/imgRating"
            app:layout_constraintEnd_toEndOf="@id/imgShare"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:textColor="@color/white"
            android:lines="2"
            app:layout_constraintStart_toStartOf="@id/imgFav"
            app:layout_constraintEnd_toEndOf="@id/imgFav"
            app:layout_constraintTop_toBottomOf="@id/imgFav"/>

        <ImageView
            android:id="@+id/imgRating"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/imgRating"
            app:layout_constraintEnd_toEndOf="@id/imgRating"
            app:layout_constraintTop_toBottomOf="@id/imgRating"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shape2" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/year"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tv_year"
        app:layout_constraintTop_toBottomOf="@id/tv_year"/>

    <TextView
        android:id="@+id/tv_genre_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:text="@string/genre_film"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:lines="2"
        app:layout_constraintStart_toEndOf="@id/tv_genre"
        app:layout_constraintTop_toBottomOf="@id/tv_year" />

    <TextView
        android:id="@+id/tv_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/episode"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tv_year"
        app:layout_constraintTop_toBottomOf="@id/tv_genre_film"/>

    <TextView
        android:id="@+id/tv_episode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/durasi2"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/tv_episode"
        app:layout_constraintTop_toBottomOf="@id/tv_genre_film" />

    <TextView
        android:id="@+id/tv_sinop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sinop"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/tv_year"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"/>

    <TextView
        android:id="@+id/tv_sinopsis_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:paddingBottom="20dp"
        android:text="@string/sinopsis"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tv_sinop"
        app:layout_constraintTop_toBottomOf="@id/tv_sinop"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>